# SlySync

./: CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  FINDINGS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANUAL.md  README.md  SECURITY_AUDIT.md  SESSION_SUMMARY.md  TODO.md  WATCHER_INTEGRATION_COMPLETE.md  install.sh  setup.sh
.github/: copilot-instructions.md
docs/: CONTRIBUTOR_WORKFLOW.md  FUTURE_IMPROVEMENTS.md  MANUAL.md  MIRROR_FEATURE.md  PRODUCT_OVERVIEW.md  README.md  SESSION_SUMMARY.md  WATCHER_INTEGRATION_COMPLETE.md
scripts/: README.md  demo_mirror_daemon.sh  test_mirror.sh
src/: bandwidth.rs  cli.rs  config.rs  crypto.rs  debounce.rs  lib.rs  main.rs  mirror.rs  mirror.rs.backup  p2p.rs  requests.rs  storage.rs  sync.rs  watcher.rs
test_final/: success.txt
tests/: cli_integration.rs  config_integration.rs  mirror_ctl_cli_integration.rs  mirror_ctl_integration.rs  watcher_integration.rs  watcher_performance.rs
