[package]
name = "slysync"
version = "1.0.0"
edition = "2021"
description = "A next-generation, peer-to-peer file synchronization CLI utility"
license = "MIT"
authors = ["SlySync Team"]
repository = "https://github.com/slysync/slysync"
keywords = ["p2p", "sync", "cli", "files", "networking"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "slysync"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI framework
clap = { version = "4.0", features = ["derive", "color", "suggestions"] }

# File system monitoring
notify = { version = "6.0", default-features = false, features = ["macos_fsevent"] }

# Networking and crypto
rustls = { version = "0.21", features = ["dangerous_configuration"] }
quinn = "0.10"
rand = "0.8"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Hashing and utilities
blake3 = "1.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cross-platform utilities
dirs = "5.0"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Base64 encoding
base64 = "0.22"

# Network discovery
mdns = "3.0"

# Additional utilities
futures = "0.3"
bytes = "1.0"
rcgen = "0.13.2"
yansi = "1.0.1"
x509-parser = "0.16"

# Colored terminal output
colored = "2.1"

# Progress bars and user feedback
indicatif = "0.17"
sha2 = "0.10.9"
async-trait = "0.1.88"
libc = "0.2.172"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
tempfile = "3.8"
serial_test = "3.0"
mockall = "0.12"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

# Test utilities
assert_matches = "1.5"
pretty_assertions = "1.4"
